add in back-end TypeScript support

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "angular2-webpack",
+  "name": "angular2-fullstack-template",
   "version": "1.0.0",
-  "description": "A webpack starter for angular 2",
+  "description": "A fullstack Angular2 template, using typescript on the backend",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
+    "frontend": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "postinstall": "typings install"
+    "postinstall": "typings install",
+    "backend": "tsc -w src/server.ts src/server/*.ts"
   },
   "license": "MIT",
+  "author": "Jon Wade",
   "dependencies": {
     "@angular/common": "2.0.0-rc.5",
     "@angular/compiler": "2.0.0-rc.5",
@@ -18,13 +20,18 @@
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
+    "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
+    "express": "^4.14.0",
+    "mongoose": "^4.5.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
@@ -36,6 +43,8 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
+    "mockery": "^1.7.0",
+    "nodemon": "^1.10.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
